# eurobin_dlr_guide_dog

./: .gitignore  README.md  banana:3284923.yaml  dlr_camera_intrinsics.yaml  pull_test.txt  requirements.txt  vision2eurobin_names.yaml
guide_dog/application/fast_api_backend/app/guide_dog_server_pcvp/assets/: .pre-commit-config.yaml  AGENTS.md  Makefile  intrinsic.json  poses.json  pyproject.toml
guide_dog/application/fast_api_backend/app/guide_dog_server_pcvp/assets/application/: conanfile.txt  start_backend_server.sh  start_streamlit.sh  stop_backend_server.sh
guide_dog/application/fast_api_backend/app/guide_dog_server_pcvp/assets/application/conan_env/: conanbuild.sh  conanbuildenv-relwithdebinfo-x86_64.sh  conanrun.sh  conanrunenv-relwithdebinfo-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  deactivate_conanrunenv-relwithdebinfo-x86_64.sh
guide_dog/application/fast_api_backend/app/guide_dog_server_pcvp/assets/application/examples/: streamlit_kinect.py  streamlit_realsense.py
guide_dog/application/fast_api_backend/app/guide_dog_server_pcvp/assets/application/fast_api_backend/: requirements.txt
guide_dog/application/fast_api_backend/app/guide_dog_server_pcvp/assets/application/mockup_pipeline/: cissy_workspace.yaml  manager.lnc  (+2 more)
guide_dog/application/fast_api_backend/app/guide_dog_server_pcvp/assets/images/: simplified_api_description.md  user_and_gd_flow.drawio
guide_dog/application/fast_api_backend/app/guide_dog_server_pcvp/assets/meeting_notes/: 2025_12_10_meeting_notes.md  2026_01_12_meeting_notes.md  2026_01_13_meeting_notes.md  2026_02_05_meeting_notes.md  2026_02_12_meeting_notes.md  2026_05_06_meeting_notes.md
guide_dog/application/fast_api_backend/app/guide_dog_server_pcvp/assets/presentations/: Guide Dog_SocRob.pptx
(+107 files in other folders)
