[project]
name = "guide_dog"
dynamic = ["version"]
description = "guide dog package"

[tool.setuptools]
package-dir = {"" = "application"}

[tool.setuptools.packages.find]
where = ["application"]

[tool.ruff]
# Same as Black.
line-length = 127
# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# See https://beta.ruff.rs/docs/rules/#ruff-specific-rules-ruf
select = ["E", "F", "B", "UP", "C90", "RUF"]
ignore = [
    "F403",  # 'from X import *' used; unable to detect undefined names
    "F405",  # Undefined name from star imports
]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 15

[tool.black]
line-length = 127

[tool.isort]
profile = "black"
line_length = 127
src_paths = ["application"]

[tool.pytype]
inputs = ["application"]
disable = []

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["name-defined", "import-not-found", "union-attr","unused-coroutine", "attr-defined","assignment", "operator", "arg-type", "import-untyped", "return-value", "var-annotated"]
follow_imports = "silent"
show_error_codes = true
# exclude = """(?x)(
#     probabilistic_tools/plot/plot_utility.py$
#     | probabilistic_tools/common/data_object.py$
#   )"""

[tool.pytest.ini_options]
# Deterministic ordering for tests; useful for pytest-xdist.
#env = [
#	"PYTHONHASHSEED=0"
#]

filterwarnings = [

]
markers = [
]

[tool.coverage.run]
disable_warnings = ["couldnt-parse"]
branch = false
omit = [
	"tests/*",
	"cpy/*"
]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "raise NotImplementedError()", "if typing.TYPE_CHECKING:"]
